OPHY-360: Fixed calendar popup rendering outside visible area when clicked "hyväksytty muutettuna"

--- a/va-virkailija/web/va/hakemus-details/Muutoshakemus.less
+++ b/va-virkailija/web/va/hakemus-details/Muutoshakemus.less
@@ -151,12 +151,9 @@ span.muutoshakemus__error {
 }
 
 #approve-with-changes-muutoshakemus-jatkoaika-oph {
-  div.rw-calendar-popup {
+  .rw-calendar-popup {
     left: unset;
-  }
-
-  div.rw-datetime-picker,
-  div.rw-widget-picker {
-    height: unset;
+    right: 0;
+    padding-right: 0;
   }
 }
